--- a/indexfuncionario.html
+++ b/indexfuncionario.html
@@ -138,11 +138,11 @@
 
   <br><br>
 
-  <button class="botao"><a href="controllerDiaria.php">CALCULAR DIARIA</a></button>
+  <button class="botao"><a href="http://localhost/estacionamento/php/controllerDiaria.php">CALCULAR DIARIA</a></button>
 
   <br><br>
 
-  <button class="botao"><a href="controllerMensalista.php">CADASTRAR CLIENTE MENSALISTA</a></button>
+  <button class="botao"><a href="http://localhost/estacionamento/php/ControllerMensalista.php">CADASTRAR CLIENTE MENSALISTA</a></button>
 
   <br><br><br>
 
